plugins {
	id 'java'
	id 'checkstyle'
	id 'jacoco'
	id 'org.springframework.boot' version '3.5.13'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.sonarqube' version '7.1.0.6387'
	id "io.sentry.jvm.gradle" version "6.5.0"
}

group = 'hexlet.code'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.7'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
	implementation 'io.sentry:sentry-spring-boot-starter-jakarta:8.34.1'
	implementation 'org.springframework.security:spring-security-crypto'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.7'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.7'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

jacoco {
	toolVersion = "0.8.13"
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy(tasks.named("jacocoTestReport"))
}

tasks.named('jacocoTestReport', JacocoReport) {
	dependsOn(tasks.named('test'))
	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}
}

sonar {
	properties {
		property("sonar.projectKey", "GypsyJR777_java-project-99")
		property("sonar.organization", "gypsyjr777")
		property("sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml")
	}
}

def sentryAuthToken = System.getenv("SENTRY_AUTH_TOKEN")
def sentryEnabled = sentryAuthToken != null && !sentryAuthToken.isBlank()

sentry {
	// Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
	// This enables source context, allowing you to see your source
	// code as part of your stack traces in Sentry.
	includeSourceContext = sentryEnabled

	org = "gypsytech"
	projectName = "java-spring-boot"
	authToken = sentryAuthToken
	autoInstallation {
		enabled.set(false)
	}
}
